main.tf
#create key pair on aws
resource "aws_key_pair" "ssh_key" {
  key_name   = "ssh_key"
  public_key = var.public_key
}

resource "aws_instance" "jenkins_instance" {
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = var.instance_type
  key_name               = var.ssh_key_name
  subnet_id              = module.vpc.public_subnets[0]
  vpc_security_group_ids = [aws_security_group.jenkins_sg.id]

  root_block_device {
    volume_size           = "30"
    delete_on_termination = true
  }

  connection {
    type        = "ssh"
    host        = self.public_ip
    user        = "ec2-user"
    private_key = file(var.private_key_path)
  }

  # provisioner "local-exec" {
  #   command = "sudo cat /var/lib/jenkins/secrets/initialAdminPassword"
  # }

  user_data = file("scripts/bootstrap.sh")

  tags = {
    Name = "Jenkins"
  }
}
